Nav Spacing Fix

--- a/style.css
+++ b/style.css
@@ -101,7 +101,6 @@ li {
 .HotBar {
     position: sticky;
     top: 0;
-    z-index: 1000;
     text-align: center;
     width: 100%;
     padding: 10px;
